--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ tbody tr.show { opacity:1; transform:translateY(0); }
       <input type="text" id="prodName" placeholder="Product Name" required>
       <input type="text" id="prodCategory" placeholder="Category" required>
       <input type="number" id="prodPrice" placeholder="Price" step="0.01" required>
-      <textarea id="prodDescription" placeholder="Product Description" rows="2" required></textarea>
+      <input id="prodDescription" placeholder="Product Description" rows="2" required>
       <input type="file" id="prodImage" accept="image/*">
       <div>
         <button type="submit" id="addUpdateBtn">Add Product</button>
